# GitHistoryToCSV

./: .env.example  .gitignore  README.md  main.py  open-archaeo.csv  pyproject.toml  repositories.csv  testGraphQL.py
output/errors/: error_log.csv
output/monthly/: 14C-power-sensitivity_github_monthly.csv  3D-ORGAN_github_monthly.csv  3D-survey-collection_github_monthly.csv  3D_EdgeAngle_github_monthly.csv  ABM tutorials_github_monthly.csv  ABMA_github_monthly.csv  ABMA_tutorials_github_monthly.csv  ADMUR_github_monthly.csv  AIDA_github_monthly.csv  ARQUB_github_monthly.csv  ARchaeology_github_monthly.csv  Akkademia_github_monthly.csv  Alligator_github_monthly.csv  AncientMetagenomeDir_github_monthly.csv  ArchAIDE_github_monthly.csv  ArchaeoAstroInsight_github_monthly.csv  ArchaeoCal_github_monthly.csv  ArchaeoData_github_monthly.csv  ArchaeoMag_github_monthly.csv  ArchaeolPhytoliths_github_monthly.csv  Archaeological_Catalogue_from_CSV_Spreadsheet_github_monthly.csv  ArcheOS_github_monthly.csv  ArcheoShape_github_monthly.csv  Arothron_github_monthly.csv  Artifacts-Analyzer_github_monthly.csv  BioArch_R_github_monthly.csv  BioProfile_github_monthly.csv  BraDypUS_github_monthly.csv  CSGR_github_monthly.csv  CalPal-Database_github_monthly.csv  CeramicApportioning_github_monthly.csv  CoccionCeramica_github_monthly.csv  CropPro_github_monthly.csv  Crop_Origins_Phylo_github_monthly.csv  Curso_Intro_R_Arqueologia_github_monthly.csv  DACORD_github_monthly.csv  DIGSS_github_monthly.csv  Dendro_R_github_monthly.csv  (+196 more)
src/: __init__.py  auth.py  processor.py  utils.py
(+8 files in other folders)
